# tokie

./: .gitignore  README.md  RELEASE_DRAFT_v0.1.0.md  RELEASE_DRAFT_v0.1.3.md  RELEASE_DRAFT_v0.1.4.md  benchmark_results.json
.github/workflows/: pyodide.yml  release.yml  speed-regression.yml  tokenizer-accuracy.yml
crates/pretokie/: Cargo.toml
crates/pretokie/examples/: mask_debug.rs  piece_diff.rs  profile_stages.rs
crates/pretokie/src/: configs.rs  lib.rs  util.rs
crates/pretokie/src/core/: config.rs  iter.rs  mask.rs  mod.rs
crates/tokie/: Cargo.toml  build.rs
crates/tokie-cli/: Cargo.toml
crates/tokie-cli/src/: main.rs
crates/tokie-python/: Cargo.toml  pyproject.toml  tokie.pyi
crates/tokie-python/src/: lib.rs
crates/tokie-python/tests/: test_tokenizer.py
crates/tokie/examples/: bench_files.rs  bench_unigram_throughput.rs  owt_compare.rs  profile_files.rs  profile_glue_costs.rs  profile_hotpath.rs  profile_load.rs  profile_piece_costs.rs  profile_spawn_cost.rs  rank_merge_bench.rs  rank_merge_diff.rs  regenerate_precompiled_v12.rs  verify_precompiled_charsmap.rs
crates/tokie/src/: build.rs  charsmap.rs  hf.rs  hub.rs  lib.rs  normalizer.rs  pool.rs  pretok.rs  serde.rs  tokenizer.rs
crates/tokie/src/encoder/: backtracking.rs  mod.rs  unigram.rs
crates/tokie/tests/: accuracy.rs
docs/superpowers/plans/: 2026-04-21-build-module-and-cli.md  2026-07-23-bulk-throughput.md
docs/superpowers/specs/: 2026-04-21-build-module-and-cli-design.md
scripts/: gen_unicode_marks.py  generate_charts.py  regen_tokiers_v13.py
