[package]
name = "pretokie"
version = "0.1.3"
edition = "2021"
description = "Fast, zero-allocation pretokenizers for BPE tokenizers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chonkie-inc/tokie"
documentation = "https://docs.rs/pretokie"
keywords = ["tokenizer", "pretokenizer", "bpe", "nlp", "transformers"]
categories = ["text-processing"]
readme = "README.md"

[features]
regex = ["regex-automata"]

[dependencies]
regex-automata = { version = "0.4", optional = true }
unicode-general-category = "1.0"

[dev-dependencies]
foldhash = "0.1"
