[package]
name = "tokie-python"
version = "0.1.0"
edition = "2024"
description = "Python bindings for tokie — blazingly fast tokenizer"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "tokie"
crate-type = ["cdylib"]

[features]
default = ["hf"]
hf = ["tokie-core/hf"]

[dependencies]
tokie-core = { package = "tokie", path = "../tokie", default-features = false }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
