[package]
name = "tokie"
version = "0.0.8"
edition = "2024"
description = "Blazingly fast tokenizer - 50x faster tokenization, 10x smaller model files, 100% accurate drop-in replacement for HuggingFace"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/chonkie-inc/tokie"
documentation = "https://docs.rs/tokie"
keywords = ["tokenizer", "bpe", "wordpiece", "nlp", "transformers"]
categories = ["text-processing", "science"]

[features]
default = []
hf = ["hf-hub"]
build = ["hf", "dep:tokenizers", "dep:tiktoken-rs"]

[dependencies]
crc32fast = "1.4"
daggrs = "0.1.1"
foldhash = "0.1"
smallvec = "1.13"
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"], optional = true }
memchr = "2.7"
chunk = "0.9"
pretokie = { version = "0.0.3", features = ["regex"] }
icu_normalizer = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-general-category = "1.0"
tokenizers = { version = "0.22", features = ["http"], optional = true }
tiktoken-rs = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tokenize"
harness = false

[[bench]]
name = "loading"
harness = false

[[example]]
name = "from_pretrained"
required-features = ["hf"]

[[example]]
name = "test_gpt2"
required-features = ["hf"]

[[example]]
name = "tiktoken_compat"
required-features = ["hf"]

[[example]]
name = "test_llama4"
required-features = ["build"]

[[example]]
name = "test_enwik8"
required-features = ["build"]

[[example]]
name = "verify_embedding_models"
required-features = ["build"]

[[example]]
name = "test_postprocessor"
required-features = ["hf"]

[[example]]
name = "convert_and_verify"
required-features = ["build"]

[[example]]
name = "regenerate_all_v11"
required-features = ["hf"]

[[example]]
name = "basic_usage"
required-features = ["hf"]

[[example]]
name = "padding_truncation"
required-features = ["hf"]

[[example]]
name = "batch_processing"
required-features = ["hf"]

[[example]]
name = "cross_encoder"
required-features = ["hf"]

[[example]]
name = "diagnose_failures"
required-features = ["build"]

[[example]]
name = "speed_regression"
required-features = ["hf"]

[[example]]
name = "regenerate_from_json"
required-features = ["hf"]

[[example]]
name = "bench_vs_hf"
required-features = ["build"]

[[example]]
name = "check_models"
required-features = ["build"]
